force-app/main/default/objects/sugati__Question__c/sugati__Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>