force-app/main/default/objects/sugati__Question__c/fields/sugati__Controlling_Answer__c.field-meta.xml
<CustomField>
    <fullName>sugati__Controlling_Answer__c</fullName>
    <label>Controlling Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>