force-app/main/default/objects/sugati__Question__c/fields/sugati__Controlling_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__Controlling_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Controlling Question</label>
    <referenceTo>sugati__Question__c</referenceTo>
    <relationshipLabel>Related Questions</relationshipLabel>
    <relationshipName>Related_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>