force-app/main/default/objects/sugati__Question__c/fields/sugati__Enquiry_Question_Section__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enquiry_Question_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Question Section</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>sugati__Enquiry_Question_Section__c.sugati__Enquiry_Question_Category__c</field>
            <operation>equals</operation>
            <valueField>sugati__Enquiry_Question_Section__c.sugati__Enquiry_Question_Category__c</valueField>
        </filterItems>
        <filterItems>
            <field>sugati__Enquiry_Question_Section__c.sugati__Enquiry_Question_Category__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Enquiry_Question_Section__c</referenceTo>
    <relationshipLabel>Questions (Enquiry Question Section)</relationshipLabel>
    <relationshipName>SectionQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>