force-app/main/default/objects/sugati__Question__c/fields/sugati__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>