force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Ack_Question_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Ack_Question_Title__c</fullName>
    <label>Ack Question Title</label>
    <length>10768</length>
    <type>LongTextArea</type>
</CustomField>