force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Available_Options__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Available_Options__c</fullName>
    <label>Available Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>