force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Category__c</fullName>
    <label>HolidayEnquiry Question Category</label>
    <referenceTo>sugati__HE_Question_Categories__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>