force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Category_Name__c</fullName>
    <formula>sugati__Q_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>