force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Due_Date__c</fullName>
    <label>Due Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>