force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Due_Date_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Due_Date_Based_On__c</fullName>
    <label>Due Date Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Departure Date</fullName>
            </value>
            <value>
                <fullName>Booked Date</fullName>
            </value>
            <value>
                <fullName>Return Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>