force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Help_Text__c</fullName>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>