force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Holiday_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Type</label>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>