force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Options__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Options__c</fullName>
    <description>Use , to separate different options</description>
    <inlineHelpText>Use , to separate different options</inlineHelpText>
    <label>Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>