force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Question_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Question_Name__c</fullName>
    <label>Question Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>