force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Related_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Related_To__c</fullName>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>