force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Related_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Related_Type__c</fullName>
    <label>Related Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>Individual Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>