force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Required__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>