force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>