force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Opportunity_Status</valueSetName>
    </valueSet>
</CustomField>