force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Task__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task ?</label>
    <type>Checkbox</type>
</CustomField>