force-app/main/default/objects/sugati__Question__c/fields/sugati__Q_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>TextArea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>