force-app/main/default/objects/sugati__Question__c/fields/sugati__S_Q_Assign_to_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Q_Assign_to_Opportunity_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the &quot;Assign to user&quot; field will be ignored and the checklist item will be assigned to the opportunity owner.</description>
    <inlineHelpText>If checked, the &quot;Assign to user&quot; field will be ignored and the checklist item will be assigned to the opportunity owner.</inlineHelpText>
    <label>Assign to Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>