force-app/main/default/objects/sugati__Question__c/fields/sugati__S_Q_Assign_to_user__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_Q_Assign_to_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the user new checklist items based on this question will be assigned to.</description>
    <label>Assign to user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>